formatting fix, menus should work on mobile

--- a/www/css/content.css
+++ b/www/css/content.css
@@ -1,34 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Mr+Bedfort&family=Noto+Sans+JP:wght@100&display=swap');
 
-.contentPane {
-    background-color: #264040;
-    opacity: 0.6;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    color: #E5F0F0;
-    margin: .25em .5em;
-    padding: 1em .5em 1em .25em;
-    height: 70vh;
-  }
-
-.topQuote {
-    margin-left: 2em;
-    margin-right: 2em;
-    position: relative;
-    top: -56em;
-}
-.quoteAttrib {
-    font-family: 'Noto Sans JP', sans-serif;
-    font-size: 1.5em;
-    text-align: right;
-    padding-right: 3em;
-    margin-top: -2em;
-}
-
 .text {
     color: #E5F0F0;
     margin: 2em 2em;
     position: relative;
-    top: -58em;
     overflow: auto;
     height: 53vh;
 }
@@ -36,3 +11,76 @@
 #content {
  font-size: 1em;   
 }
+
+/* Navbar container */
+.nav {
+    overflow: hidden;
+    background-color: #373E40;
+    width: 100%;
+  }
+  
+  /* Links inside the navbar */
+  .nav a {
+    float: left;
+    font-size: 1em;
+    color: #B7D5D4;
+    text-align: center;
+    padding: .75em 1em;
+    text-decoration: none;
+  }
+  
+  li {
+    display: inline;
+  }
+  /* The dropdown container */
+  .proj-dropdown {
+    float: left;
+    overflow: hidden;
+  }
+  
+  /* Dropdown button */
+  .proj-dropdown .proj-dropdown-bttn {
+    font-size: 1em;
+    border: none;
+    outline: none;
+    color: #B7D5D4;
+    padding: .75em 1em;
+    background-color: inherit;
+    font-family: inherit; /* Important for vertical align on mobile phones */
+    margin: 0; /* Important for vertical align on mobile phones */
+  }
+
+  .nav a:active, .proj-dropdown:active .proj-dropdown-bttn {
+    background-color: #305252;
+  }
+
+  /* Dropdown content (hidden by default) */
+  .proj-dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #B7D5D4;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .proj-dropdown-content a {
+    float: none;
+    color: black;
+    padding: .75em 1em;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    width: 100%
+  }
+  
+  /* Add a grey background color to dropdown links on active */
+  .proj-dropdown-content a:active, a:hover {
+    background-color: #77878B;
+  }
+
+  .proj-dropdown:active, .proj-dropdown:hover .proj-dropdown-content {
+    display: block;
+    z-index: 1;
+  }
